Correct some errors

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,113 +1,154 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{SuoWeiLanYiZhiBiaoCuPingGuYiPingGuZhuTiShengYiTiShengWenBaoZhang2024,
+  title = {{以指标促评估  以评估助提升  以提升稳保障------绘制应急物资保障弹性能力画像}},
+  author = {{索玮岚} and {徐文杰} and {张晶} and {孙晓蕾}},
+  year = {2024},
+  journal = {中国减灾},
+  number = {7},
+  pages = {30--33},
+  issn = {1002-4549},
+  urldate = {2024-05-17},
+  abstract = {{$<$}正{$>$}应急物资保障是防范化解重大风险、统筹好发展与安全两件大事的重要基础性工作,是应急管理体系和能力建设的重要内容。本刊开辟物资储备专栏,连续刊载应急物资储备相关理论探索和地方实践经验。栏目通过介绍应急物资储备的政策制度、资源投入、地方实践、技术支撑等工作,以期为各地应急物资储备工作提供可资借鉴的经验。},
+  copyright = {All rights reserved},
+  langid = {chinese},
+  keywords = {,/read},
+  annotation = {original-container-title: Disaster Reduction in China\\
+foundation: 科技创新2030重大项目课题``应急物资物流仓储调配保障体系应对风险的弹性评估技术''[2021ZD0114201]阶段性成果之一；\\
+download: 1\\
+CLC: D63;F259.21\\
+CNKICite: 0\\
+dbcode: CJFD\\
+dbname: CJFDAUTO\\
+filename: ZGJI202407021},
+  file = {C:\Users\Xu\Zotero\storage\DPB3MFS5\2024_索玮岚 等_以指标促评估  以评估助提升  以提升稳保障——绘制应急物资保障弹性能力画像.pdf}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{wangDeepLearningbasedNonlinear2023,
+  title = {A Deep Learning-Based Nonlinear Ensemble Approach with Biphasic Feature Selection for Multivariate Exchange Rate Forecasting},
+  shorttitle = {基于深度学习的双相特征选择非线性集成方法在多元汇率预测中的应用},
+  author = {Wang, Jujie and He, Maolin and Xu, Wenjie and Jing, Feng},
+  year = {2023},
+  month = feb,
+  journal = {Multimedia Tools and Applications},
+  volume = {82},
+  number = {15},
+  pages = {22961--22979},
+  issn = {1380-7501, 1573-7721},
+  doi = {10.1007/s11042-023-14497-9},
+  urldate = {2023-02-25},
+  copyright = {All rights reserved},
+  langid = {english},
+  lccn = {4},
+  keywords = {/read},
+  annotation = {🏷️ /Done\\
+titleTranslation: 基于深度学习的双相特征选择非线性集成方法在多元汇率预测中的应用\\
+rate: 1},
+  file = {C:\Users\Xu\Zotero\storage\NEFKKY7R\2023_Multimedia Tools Appl._Wang 等_A deep learning-based nonlinear ensemble approach with biphasic feature selection for multivariate e.pdf}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{wangDepthFeatureExtractionbased2022,
+  title = {Depth Feature Extraction-Based Deep Ensemble Learning Framework for High Frequency Futures Price Forecasting},
+  shorttitle = {基于深度特征提取的高频期货价格预测深度集成学习框 架},
+  author = {Wang, Jujie and Chen, Yu and Zhu, Shuzhou and Xu, Wenjie},
+  year = {2022},
+  month = apr,
+  journal = {Digital Signal Processing},
+  volume = {127},
+  pages = {103567},
+  issn = {10512004},
+  doi = {10.1016/j.dsp.2022.103567},
+  urldate = {2022-06-26},
+  copyright = {All rights reserved},
+  langid = {english},
+  lccn = {3},
+  keywords = {/read},
+  annotation = {🏷️ /Done\\
+titleTranslation: 基于深度特征提取的高频期货价格预测深度集成学习框架\\
+rate: 1},
+  file = {C:\Users\Xu\Zotero\storage\HAPGLTKT\2022_Digital Signal Process._Wang 等_Depth feature extraction-based deep ensemble learning framework for high frequency futures price for.pdf}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
+@article{wangNovelAirQuality2022,
+  title = {A Novel Air Quality Prediction and Early Warning System Based on Combined Model of Optimal Feature Extraction and Intelligent Optimization},
+  shorttitle = {基于最优特征提取和智能优化组合模型的空气质量预测 预警系统},
+  author = {Wang, Jujie and Xu, Wenjie and Zhang, Yue and Dong, Jian},
+  year = {2022},
+  month = apr,
+  journal = {Chaos, Solitons \& Fractals},
+  volume = {158},
+  pages = {112098},
+  issn = {09600779},
+  doi = {10.1016/j.chaos.2022.112098},
+  urldate = {2022-06-26},
+  copyright = {All rights reserved},
+  langid = {english},
+  lccn = {1},
+  keywords = {/read},
+  annotation = {🏷️ /Done\\
+titleTranslation: 基于最优特征提取和智能优化组合模型的空气质量预测预警系统\\
+abstractTranslation: 有效的大气污染预测对防治大气污染、保护居民健康具有重要意义。为了提高PM2.5的预测精度，本研究开发了一种基于最优特征提取和智能优化的PM2.5浓度预测预警系统。首先，设计了一种反馈变分模态分解算法来分解PM2.5浓度序列，并使用模糊熵来重建相似复杂度的模式。然后，利用Copula熵选择对PM2.5影响较大的影响因素。接下来，将重构的分量和影响因素输入到三个单独的预测模型中，包括长短期记忆神经网络、门控递归单元神经网络和时间卷积网络，用于训练和多步短期预测。通过高斯过程回归对各个预测模型的结果进行非线性组合，并通过多目标灰狼优化算法进行优化。最后，对不同重建分量的预测结果进行非线性积分，得到最终的PM2.5预测结果。在中国两个城市的实证研究中，本研究提出的组合预测模型在预测准确性和稳定性方面优于其他六个比较模型。实验结果表明，本文提出的混合预测模型能够对大气污染进行有效的预测和预警。\\
+rate: 2},
+  file = {C:\Users\Xu\Zotero\storage\VYV7L4ZA\2022_Chaos, Solitons  Fractals_Wang 等_A novel air quality prediction and early warning system based on combined model of optimal feature e.pdf}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{wangTwostageDeepLearning2022,
+  title = {Two-Stage Deep Learning Hybrid Framework Based on Multi-Factor Multi-Scale and Intelligent Optimization for Air Pollutant Prediction and Early Warning},
+  shorttitle = {基于多因子多尺度智能优化的两阶段深度学习混合框架 在大气污染物预测预警中的应用},
+  author = {Wang, Jujie and Xu, Wenjie and Dong, Jian and Zhang, Yue},
+  year = {2022},
+  month = mar,
+  journal = {Stochastic Environmental Research and Risk Assessment},
+  volume = {36},
+  number = {10},
+  pages = {3417--3437},
+  issn = {1436-3240, 1436-3259},
+  doi = {10.1007/s00477-022-02202-5},
+  urldate = {2022-06-26},
+  copyright = {All rights reserved},
+  langid = {english},
+  lccn = {3},
+  keywords = {/read},
+  annotation = {🏷️ /Done\\
+titleTranslation: 基于多因子多尺度智能优化的两阶段深度学习混合框架在大气污染物预测预警中的应用\\
+abstractTranslation: 大气污染浓度的有效预测对市民的身心健康和城市污染控制都具有重要意义。PM2.5作为大气污染物的主要成分之一，准确预测PM2.5可以为大气污染控制和污染预警提供参考。本研究创新地将特征提取技术、特征选择方法和智能优化算法相结合，提出了一种大气污染物预测预警框架。首先，使用带自适应噪声的完全集成经验模式分解将PM2.5序列分解成几个子序列，然后使用模糊熵重建子序列中不同复杂度的新分量。然后，采用最大相关和最小冗余的方法来选择不同重构分量的影响因素。然后，使用由灰狼优化算法优化的长短期记忆人工神经网络，构建两阶段深度学习混合框架，以对重建组件的预测和非线性集成进行建模。最后，基于所提出的混合预测框架，实现了对大气污染物的有效预测和预警。在中国三个城市的实证研究中，所提出的混合框架的预测精度、预警精度和预测稳定性优于其他比较模型。分析结果表明，所开发的混合框架可以作为大气污染物预测和预警的有效工具。\\
+rate: 1},
+  file = {C:\Users\Xu\Zotero\storage\DB8YWC88\2022_Stochastic Environ. Res. Risk Assess._Wang 等_Two-stage deep learning hybrid framework based on multi-factor multi-scale and intelligent optimizat.pdf}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{xuOptimizedDecompositionIntegration2022,
+  title = {An Optimized Decomposition Integration Framework for Carbon Price Prediction Based on Multi-Factor Two-Stage Feature Dimension Reduction},
+  shorttitle = {基于多因素两阶段特征降维的碳价格预测优化分解集成 框架},
+  author = {Xu, Wenjie and Wang, Jujie and Zhang, Yue and Li, Jianping and Wei, Lu},
+  year = {2022},
+  month = jul,
+  journal = {Annals of Operations Research},
+  issn = {0254-5330, 1572-9338},
+  doi = {10.1007/s10479-022-04858-2},
+  urldate = {2023-09-03},
+  copyright = {All rights reserved},
+  langid = {english},
+  lccn = {3},
+  keywords = {/read},
+  annotation = {rate: 1\\
+titleTranslation: 基于多因素两阶段特征降维的碳价格预测优化分解集成框架},
+  file = {C:\Users\Xu\Zotero\storage\ESB2PAFB\2022_Ann. Oper. Res._Xu 等_An optimized decomposition integration framework for carbon price prediction based on multi-factor t.pdf}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{xuResilienceAssessmentEmergency2023,
+  title = {Resilience Assessment for the Emergency Supplies Security System Based on a Matter-Element Extension Method},
+  shorttitle = {基于物元可拓方法的应急物资保障系统弹性评估},
+  author = {Xu, Wenjie and Zhang, Jing and Suo, Weilan},
+  year = {2023},
+  journal = {Procedia Computer Science},
+  volume = {221},
+  pages = {741--746},
+  issn = {18770509},
+  doi = {10.1016/j.procs.2023.08.046},
+  copyright = {All rights reserved},
+  langid = {english},
+  lccn = {EI},
+  keywords = {/read},
+  annotation = {🏷️ /Done\\
+titleTranslation: 基于物元可拓方法的应急物资保障系统弹性评估\\
+rate: 1},
+  file = {C:\Users\Xu\Zotero\storage\XPPBB8UE\2023_Procedia Comput. Sci._Xu 等_Resilience assessment for the emergency supplies security system based on a matter-element extension.pdf}
 }
