--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,154 +1,143 @@
 @article{SuoWeiLanYiZhiBiaoCuPingGuYiPingGuZhuTiShengYiTiShengWenBaoZhang2024,
-  title = {{以指标促评估  以评估助提升  以提升稳保障------绘制应急物资保障弹性能力画像}},
-  author = {{索玮岚} and {徐文杰} and {张晶} and {孙晓蕾}},
-  year = {2024},
-  journal = {中国减灾},
-  number = {7},
-  pages = {30--33},
-  issn = {1002-4549},
-  urldate = {2024-05-17},
-  abstract = {{$<$}正{$>$}应急物资保障是防范化解重大风险、统筹好发展与安全两件大事的重要基础性工作,是应急管理体系和能力建设的重要内容。本刊开辟物资储备专栏,连续刊载应急物资储备相关理论探索和地方实践经验。栏目通过介绍应急物资储备的政策制度、资源投入、地方实践、技术支撑等工作,以期为各地应急物资储备工作提供可资借鉴的经验。},
-  copyright = {All rights reserved},
-  langid = {chinese},
-  keywords = {,/read},
-  annotation = {original-container-title: Disaster Reduction in China\\
-foundation: 科技创新2030重大项目课题``应急物资物流仓储调配保障体系应对风险的弹性评估技术''[2021ZD0114201]阶段性成果之一；\\
-download: 1\\
-CLC: D63;F259.21\\
-CNKICite: 0\\
-dbcode: CJFD\\
-dbname: CJFDAUTO\\
-filename: ZGJI202407021},
-  file = {C:\Users\Xu\Zotero\storage\DPB3MFS5\2024_索玮岚 等_以指标促评估  以评估助提升  以提升稳保障——绘制应急物资保障弹性能力画像.pdf}
+  title       = {{以指标促评估  以评估助提升  以提升稳保障------绘制应急物资保障弹性能力画像}},
+  author      = {{索玮岚} and {徐文杰} and {张晶} and {孙晓蕾}},
+  year        = {2024},
+  journal     = {中国减灾},
+  number      = {7},
+  pages       = {30--33},
+  issn        = {1002-4549},
+  urldate     = {2024-05-17},
+  abstract    = {应急物资保障是防范化解重大风险、统筹好发展与安全两件大事的重要基础性工作,是应急管理体系和能力建设的重要内容.本刊开辟物资储备专栏,连续刊载应急物资储备相关理论探索和地方实践经验.栏目通过介绍应急物资储备的政策制度、资源投入、地方实践、技术支撑等工作,以期为各地应急物资储备工作提供可资借鉴的经验.},
+  copyright   = {All rights reserved},
+  langid      = {chinese},
+  html        = {https://kns.cnki.net/KCMS/detail/detail.aspx?dbcode=CJFD&dbname=CJFDAUTO&filename=ZGJI202407021},
+  pdf         = {SuoWeiLanYiZhiBiaoCuPingGuYiPingGuZhuTiShengYiTiShengWenBaoZhang2024.pdf},
+  bibtex_show = {true},
+  preview     = {SuoWeiLanYiZhiBiaoCuPingGuYiPingGuZhuTiShengYiTiShengWenBaoZhang2024.png}
 }
 
 @article{wangDeepLearningbasedNonlinear2023,
-  title = {A Deep Learning-Based Nonlinear Ensemble Approach with Biphasic Feature Selection for Multivariate Exchange Rate Forecasting},
-  shorttitle = {基于深度学习的双相特征选择非线性集成方法在多元汇率预测中的应用},
-  author = {Wang, Jujie and He, Maolin and Xu, Wenjie and Jing, Feng},
-  year = {2023},
-  month = feb,
-  journal = {Multimedia Tools and Applications},
-  volume = {82},
-  number = {15},
-  pages = {22961--22979},
-  issn = {1380-7501, 1573-7721},
-  doi = {10.1007/s11042-023-14497-9},
-  urldate = {2023-02-25},
-  copyright = {All rights reserved},
-  langid = {english},
-  lccn = {4},
-  keywords = {/read},
-  annotation = {🏷️ /Done\\
-titleTranslation: 基于深度学习的双相特征选择非线性集成方法在多元汇率预测中的应用\\
-rate: 1},
-  file = {C:\Users\Xu\Zotero\storage\NEFKKY7R\2023_Multimedia Tools Appl._Wang 等_A deep learning-based nonlinear ensemble approach with biphasic feature selection for multivariate e.pdf}
+  title       = {A Deep Learning-Based Nonlinear Ensemble Approach with Biphasic Feature Selection for Multivariate Exchange Rate Forecasting},
+  shorttitle  = {基于深度学习的双相特征选择非线性集成方法在多元汇率预测中的应用},
+  author      = {Wang, Jujie and He, Maolin and Xu, Wenjie and Jing, Feng},
+  year        = {2023},
+  month       = feb,
+  journal     = {Multimedia Tools and Applications},
+  volume      = {82},
+  number      = {15},
+  pages       = {22961--22979},
+  issn        = {1380-7501, 1573-7721},
+  doi         = {10.1007/s11042-023-14497-9},
+  urldate     = {2023-02-25},
+  abstract    = {Exchange rate prediction is a challenging task for investors and policymakers due to its nonstationary and nonlinear characteristics. This study develops a novel deep learningbased nonlinear ensemble approach with biphasic feature selection for multivariate exchange rate forecasting. The novel hybrid model has three modules, the preprocessing of target series, feature engineering, and forecasting module. The first module aims to extract more regular signals and reduce the dimension of the target series for better feeding into the forecasting module. The second part is the selection and reconstruction of twelve external variables, which outputs three sequences that contain the most important information. The forecasting part consists of Bi-directional long short-term memory and attention mechanism, which has better performance than the basic artificial intelligence algorithms. Three evaluation indicators are adopted to assess the hybrid model's performance. The results show that the new model performs better than other compared models.},
+  copyright   = {All rights reserved},
+  langid      = {english},
+  html        = {https://doi.org/10.1007/s11042-023-14497-9},
+  pdf         = {wangDeepLearningbasedNonlinear2023.pdf},
+  bibtex_show = {true},
+  preview     = {wangDeepLearningbasedNonlinear2023.png}
 }
 
 @article{wangDepthFeatureExtractionbased2022,
-  title = {Depth Feature Extraction-Based Deep Ensemble Learning Framework for High Frequency Futures Price Forecasting},
-  shorttitle = {基于深度特征提取的高频期货价格预测深度集成学习框 架},
-  author = {Wang, Jujie and Chen, Yu and Zhu, Shuzhou and Xu, Wenjie},
-  year = {2022},
-  month = apr,
-  journal = {Digital Signal Processing},
-  volume = {127},
-  pages = {103567},
-  issn = {10512004},
-  doi = {10.1016/j.dsp.2022.103567},
-  urldate = {2022-06-26},
-  copyright = {All rights reserved},
-  langid = {english},
-  lccn = {3},
-  keywords = {/read},
-  annotation = {🏷️ /Done\\
-titleTranslation: 基于深度特征提取的高频期货价格预测深度集成学习框架\\
-rate: 1},
-  file = {C:\Users\Xu\Zotero\storage\HAPGLTKT\2022_Digital Signal Process._Wang 等_Depth feature extraction-based deep ensemble learning framework for high frequency futures price for.pdf}
+  title       = {Depth Feature Extraction-Based Deep Ensemble Learning Framework for High Frequency Futures Price Forecasting},
+  shorttitle  = {基于深度特征提取的高频期货价格预测深度集成学习框 架},
+  author      = {Wang, Jujie and Chen, Yu and Zhu, Shuzhou and Xu, Wenjie},
+  year        = {2022},
+  month       = apr,
+  journal     = {Digital Signal Processing},
+  volume      = {127},
+  pages       = {103567},
+  issn        = {10512004},
+  doi         = {10.1016/j.dsp.2022.103567},
+  urldate     = {2022-06-26},
+  abstract    = {Whether the change trend of futures price can be accurately analyzed and predicted is the key to the success or failure of futures trading. This paper constructs a new deep ensemble learning framework combining signal decomposition and exogenous variable feature mining for high-frequency futures price prediction, which consists of depth feature extraction (DFE), long short-term memory optimized by attention mechanism (ALSTM) and Light gradient boosting machine (LightGBM). In the depth feature extraction stage, based on multi-scale entropy (MSE) and Savitzky-Golay filter (SG filter), an improved denoising variational mode decomposition (VMD) is proposed to extract the fluctuation characteristics of futures price signal and eliminate the interference of complex components. To avoid the collinearity redundancy of high-dimensional exogenous variables, an enhanced dimensionality reduction method combining Spearman correlation analysis and stacked autoencoder (SAE) is designed to ensure the simplicity and correlation of input factors. In the prediction phase, ALSTM is adopted as a base predictor for constructing point prediction model by the DFE results, which can focus on learning more important data features. Finally, LightGBM, which has excellent effect in the field of ensemble learning, is used to integrate the base prediction results to obtain the final results. The actual closing price data of three representative futures varieties in China's futures market are selected to verify the accuracy of the proposed framework. Compared with other benchmark models, this developed framework has better futures closing price prediction performance.},
+  copyright   = {All rights reserved},
+  langid      = {english},
+  html        = {https://doi.org/10.1016/j.dsp.2022.103567},
+  pdf         = {wangDepthFeatureExtractionbased2022.pdf},
+  bibtex_show = {true},
+  abbr        = {DSP},
+  preview     = {wangDepthFeatureExtractionbased2022.png}
 }
 
 @article{wangNovelAirQuality2022,
-  title = {A Novel Air Quality Prediction and Early Warning System Based on Combined Model of Optimal Feature Extraction and Intelligent Optimization},
-  shorttitle = {基于最优特征提取和智能优化组合模型的空气质量预测 预警系统},
-  author = {Wang, Jujie and Xu, Wenjie and Zhang, Yue and Dong, Jian},
-  year = {2022},
-  month = apr,
-  journal = {Chaos, Solitons \& Fractals},
-  volume = {158},
-  pages = {112098},
-  issn = {09600779},
-  doi = {10.1016/j.chaos.2022.112098},
-  urldate = {2022-06-26},
-  copyright = {All rights reserved},
-  langid = {english},
-  lccn = {1},
-  keywords = {/read},
-  annotation = {🏷️ /Done\\
-titleTranslation: 基于最优特征提取和智能优化组合模型的空气质量预测预警系统\\
-abstractTranslation: 有效的大气污染预测对防治大气污染、保护居民健康具有重要意义。为了提高PM2.5的预测精度，本研究开发了一种基于最优特征提取和智能优化的PM2.5浓度预测预警系统。首先，设计了一种反馈变分模态分解算法来分解PM2.5浓度序列，并使用模糊熵来重建相似复杂度的模式。然后，利用Copula熵选择对PM2.5影响较大的影响因素。接下来，将重构的分量和影响因素输入到三个单独的预测模型中，包括长短期记忆神经网络、门控递归单元神经网络和时间卷积网络，用于训练和多步短期预测。通过高斯过程回归对各个预测模型的结果进行非线性组合，并通过多目标灰狼优化算法进行优化。最后，对不同重建分量的预测结果进行非线性积分，得到最终的PM2.5预测结果。在中国两个城市的实证研究中，本研究提出的组合预测模型在预测准确性和稳定性方面优于其他六个比较模型。实验结果表明，本文提出的混合预测模型能够对大气污染进行有效的预测和预警。\\
-rate: 2},
-  file = {C:\Users\Xu\Zotero\storage\VYV7L4ZA\2022_Chaos, Solitons  Fractals_Wang 等_A novel air quality prediction and early warning system based on combined model of optimal feature e.pdf}
+  title       = {A Novel Air Quality Prediction and Early Warning System Based on Combined Model of Optimal Feature Extraction and Intelligent Optimization},
+  shorttitle  = {基于最优特征提取和智能优化组合模型的空气质量预测 预警系统},
+  author      = {Wang, Jujie and Xu, Wenjie and Zhang, Yue and Dong, Jian},
+  year        = {2022},
+  month       = apr,
+  journal     = {Chaos, Solitons \& Fractals},
+  volume      = {158},
+  pages       = {112098},
+  issn        = {09600779},
+  doi         = {10.1016/j.chaos.2022.112098},
+  urldate     = {2022-06-26},
+  abstract    = {An effective air pollution prediction is of great significance to prevent and control air pollution and protect the health of residents. In order to improve the prediction accuracy of PM2.5, an innovative PM2.5 concentration prediction and early warning system based on optimal feature extraction and intelligent optimization is developed in this study. First, a feedback variational modal decomposition algorithm is designed to decompose the PM2.5 concentration sequence and fuzzy entropy is used to reconstruct the patterns of similar complexity. Then, Copula entropy is used to select the influencing factors with a high impact on PM2.5. Next, the reconstructed components and influencing factors are inputted to three individual prediction models, including long short-term memory neural network, gated recurrent unit neural network, and temporal convolutional network, for training and multi-step short-term prediction. The results of the individual prediction models are nonlinearly combined by Gaussian process regression which is optimized by the multi-objective grey wolf optimization algorithm. Finally, the prediction results of different reconstructed components are nonlinearly integrated to obtain the final PM2.5 prediction results. In an empirical study of two Chinese cities, the combined prediction model proposed in this study outperformed the other six comparative models in terms of prediction accuracy and stability. The experimental results prove that the hybrid prediction model proposed in this paper can make an effective prediction and early warnings of air pollution.},
+  copyright   = {All rights reserved},
+  langid      = {english},
+  html        = {https://doi.org/10.1016/j.chaos.2022.112098},
+  pdf         = {wangNovelAirQuality2022.pdf},
+  bibtex_show = {true},
+  preview     = {wangNovelAirQuality2022.png}
 }
 
 @article{wangTwostageDeepLearning2022,
-  title = {Two-Stage Deep Learning Hybrid Framework Based on Multi-Factor Multi-Scale and Intelligent Optimization for Air Pollutant Prediction and Early Warning},
-  shorttitle = {基于多因子多尺度智能优化的两阶段深度学习混合框架 在大气污染物预测预警中的应用},
-  author = {Wang, Jujie and Xu, Wenjie and Dong, Jian and Zhang, Yue},
-  year = {2022},
-  month = mar,
-  journal = {Stochastic Environmental Research and Risk Assessment},
-  volume = {36},
-  number = {10},
-  pages = {3417--3437},
-  issn = {1436-3240, 1436-3259},
-  doi = {10.1007/s00477-022-02202-5},
-  urldate = {2022-06-26},
-  copyright = {All rights reserved},
-  langid = {english},
-  lccn = {3},
-  keywords = {/read},
-  annotation = {🏷️ /Done\\
-titleTranslation: 基于多因子多尺度智能优化的两阶段深度学习混合框架在大气污染物预测预警中的应用\\
-abstractTranslation: 大气污染浓度的有效预测对市民的身心健康和城市污染控制都具有重要意义。PM2.5作为大气污染物的主要成分之一，准确预测PM2.5可以为大气污染控制和污染预警提供参考。本研究创新地将特征提取技术、特征选择方法和智能优化算法相结合，提出了一种大气污染物预测预警框架。首先，使用带自适应噪声的完全集成经验模式分解将PM2.5序列分解成几个子序列，然后使用模糊熵重建子序列中不同复杂度的新分量。然后，采用最大相关和最小冗余的方法来选择不同重构分量的影响因素。然后，使用由灰狼优化算法优化的长短期记忆人工神经网络，构建两阶段深度学习混合框架，以对重建组件的预测和非线性集成进行建模。最后，基于所提出的混合预测框架，实现了对大气污染物的有效预测和预警。在中国三个城市的实证研究中，所提出的混合框架的预测精度、预警精度和预测稳定性优于其他比较模型。分析结果表明，所开发的混合框架可以作为大气污染物预测和预警的有效工具。\\
-rate: 1},
-  file = {C:\Users\Xu\Zotero\storage\DB8YWC88\2022_Stochastic Environ. Res. Risk Assess._Wang 等_Two-stage deep learning hybrid framework based on multi-factor multi-scale and intelligent optimizat.pdf}
+  title       = {Two-Stage Deep Learning Hybrid Framework Based on Multi-Factor Multi-Scale and Intelligent Optimization for Air Pollutant Prediction and Early Warning},
+  shorttitle  = {基于多因子多尺度智能优化的两阶段深度学习混合框架 在大气污染物预测预警中的应用},
+  author      = {Wang, Jujie and Xu, Wenjie and Dong, Jian and Zhang, Yue},
+  year        = {2022},
+  month       = mar,
+  journal     = {Stochastic Environmental Research and Risk Assessment},
+  volume      = {36},
+  number      = {10},
+  pages       = {3417--3437},
+  issn        = {1436-3240, 1436-3259},
+  doi         = {10.1007/s00477-022-02202-5},
+  urldate     = {2022-06-26},
+  abstract    = {Effective prediction of air pollution concentrations is of great importance to both the physical and mental health of citizens and urban pollution control. As one of the main components of air pollutants, accurate prediction of PM2.5 can provide a reference for air pollution control and pollution warning. This study proposes an air pollutant prediction and early warning framework, which innovatively combines feature extraction techniques, feature selection methods and intelligent optimization algorithms. First, the PM2.5 sequence is decomposed into several subsequences using the complete ensemble empirical mode decomposition with adaptive noise, and then the new components of the subsequences with different complexity are reconstructed using fuzzy entropy. Then, the Max-Relevance and Min-Redundancy method is used to select the influencing factors of the different reconstructed components. Then, a two-stage deep learning hybrid framework is constructed to model the prediction and nonlinear integration of the reconstructed components using a long short-term memory artificial neural network optimized by the gray wolf optimization algorithm. Finally, based on the proposed hybrid prediction framework, effective prediction and early warning of air pollutants are achieved. In an empirical study in three cities in China, the prediction accuracy, warning accuracy and prediction stability of the proposed hybrid framework outperformed the other comparative models. The analysis results indicate that the developed hybrid framework can be used as an effective tool for air pollutant prediction and early warning.},
+  copyright   = {All rights reserved},
+  langid      = {english},
+  html        = {https://doi.org/10.1007/s00477-022-02202-5},
+  pdf         = {wangTwostageDeepLearning2022.pdf},
+  bibtex_show = {true},
+  preview     = {wangTwostageDeepLearning2022.png}
 }
 
 @article{xuOptimizedDecompositionIntegration2022,
-  title = {An Optimized Decomposition Integration Framework for Carbon Price Prediction Based on Multi-Factor Two-Stage Feature Dimension Reduction},
-  shorttitle = {基于多因素两阶段特征降维的碳价格预测优化分解集成 框架},
-  author = {Xu, Wenjie and Wang, Jujie and Zhang, Yue and Li, Jianping and Wei, Lu},
-  year = {2022},
-  month = jul,
-  journal = {Annals of Operations Research},
-  issn = {0254-5330, 1572-9338},
-  doi = {10.1007/s10479-022-04858-2},
-  urldate = {2023-09-03},
-  copyright = {All rights reserved},
-  langid = {english},
-  lccn = {3},
-  keywords = {/read},
-  annotation = {rate: 1\\
-titleTranslation: 基于多因素两阶段特征降维的碳价格预测优化分解集成框架},
-  file = {C:\Users\Xu\Zotero\storage\ESB2PAFB\2022_Ann. Oper. Res._Xu 等_An optimized decomposition integration framework for carbon price prediction based on multi-factor t.pdf}
+  title       = {An Optimized Decomposition Integration Framework for Carbon Price Prediction Based on Multi-Factor Two-Stage Feature Dimension Reduction},
+  shorttitle  = {基于多因素两阶段特征降维的碳价格预测优化分解集成 框架},
+  author      = {Xu, Wenjie and Wang, Jujie and Zhang, Yue and Li, Jianping and Wei, Lu},
+  year        = {2022},
+  month       = jul,
+  journal     = {Annals of Operations Research},
+  issn        = {0254-5330, 1572-9338},
+  doi         = {10.1007/s10479-022-04858-2},
+  urldate     = {2023-09-03},
+  abstract    = {The carbon trading market is an effective tool to combat greenhouse gas emissions, and as the core issue of carbon market, carbon price can stimulate the market for technological innovation and industrial transformation. However, the complex characteristics of carbon price such as nonlinearity and nonstationarity bring great challenges to carbon price prediction research. In this study, potential influencing factors of carbon price are introduced into carbon price forecasting, and a novel hybrid carbon price forecasting framework is developed, which contains data decomposition and reconstruction techniques, two-stage feature dimension reduction methods, intelligent and optimized deep learning forecasting with nonlinear integrated models and interval forecasting. Firstly, the carbon price series is decomposed into several simple and smooth subsequences using variational modal decomposition. The stacked autoencoder is then used to extract its effective features and reconstruct them into several new subsequences. A two-stage feature dimension reduction method is utilized for feature selection and extraction of exogenous variables. A bidirectional long and short-term memory model optimized based on the cuckoo search algorithm was used for prediction and nonlinear integration. Finally, Gaussian process regression based on a hybrid kernel function is applied to carbon price interval forecasting. The validity of the model was verified on seven real carbon trading pilot datasets in China. The methodology outperforms all benchmark models in the final simulation results, providing a novel and efficient forecasting method for the carbon trading industry.},
+  copyright   = {All rights reserved},
+  langid      = {english},
+  html        = {https://doi.org/10.1007/s10479-022-04858-2},
+  abbr        = {AOR},
+  pdf         = {xuOptimizedDecompositionIntegration2022.pdf},
+  bibtex_show = {true},
+  preview     = {xuOptimizedDecompositionIntegration2022.png}
 }
 
 @article{xuResilienceAssessmentEmergency2023,
-  title = {Resilience Assessment for the Emergency Supplies Security System Based on a Matter-Element Extension Method},
-  shorttitle = {基于物元可拓方法的应急物资保障系统弹性评估},
-  author = {Xu, Wenjie and Zhang, Jing and Suo, Weilan},
-  year = {2023},
-  journal = {Procedia Computer Science},
-  volume = {221},
-  pages = {741--746},
-  issn = {18770509},
-  doi = {10.1016/j.procs.2023.08.046},
-  copyright = {All rights reserved},
-  langid = {english},
-  lccn = {EI},
-  keywords = {/read},
-  annotation = {🏷️ /Done\\
-titleTranslation: 基于物元可拓方法的应急物资保障系统弹性评估\\
-rate: 1},
-  file = {C:\Users\Xu\Zotero\storage\XPPBB8UE\2023_Procedia Comput. Sci._Xu 等_Resilience assessment for the emergency supplies security system based on a matter-element extension.pdf}
+  title       = {Resilience Assessment for the Emergency Supplies Security System Based on a Matter-Element Extension Method},
+  shorttitle  = {基于物元可拓方法的应急物资保障系统弹性评估},
+  author      = {Xu, Wenjie and Zhang, Jing and Suo, Weilan},
+  year        = {2023},
+  journal     = {Procedia Computer Science},
+  volume      = {221},
+  pages       = {741--746},
+  issn        = {18770509},
+  doi         = {10.1016/j.procs.2023.08.046},
+  abstract    = {The emergency supplies security system (ESSS) plays a vital role in preventing major disasters and ensuring people's safety. Resilience is an important benchmark to characterize the ability of disaster resistance of the ESSS. However, the ESSS complexity and resilience dynamic evolution make ESSS resilience assessment challenging. This study develops a hierarchical ESSS resilience assessment system comprising three dimensions and twelve criteria, and proposes a dynamic resilience assessment model based on a matter-element extension method. Subsequently, a case study is conducted to demonstrate the applicability of the proposed model. The assessment results indicate that the ESSS resilience in the sample cities has improved over the past five years. However, there are still some shortcomings such as low response rates and high operating costs. This study provides a valuable criteria reference and effective model support for ESSS resilience assessment, which is beneficial for decision makers to clarify the resilience profile, identify the weakness and promote resilience improvement.},
+  copyright   = {All rights reserved},
+  langid      = {english},
+  html        = {https://doi.org/10.1016/j.procs.2023.08.046},
+  pdf         = {xuResilienceAssessmentEmergency2023.pdf},
+  bibtex_show = {true},
+  preview     = {xuResilienceAssessmentEmergency2023.png}
 }
