Update some information

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @article{SuoWeiLanYiZhiBiaoCuPingGuYiPingGuZhuTiShengYiTiShengWenBaoZhang2024,
   title       = {{以指标促评估  以评估助提升  以提升稳保障------绘制应急物资保障弹性能力画像}},
-  author      = {{索玮岚} and {徐文杰} and {张晶} and {孙晓蕾}},
+  author      = {Suo, Weilan and Xu, Wenjie and Zhang, Jing and Sun, Xiaolei},
   year        = {2024},
   journal     = {中国减灾},
   number      = {7},
