Correct the inline code setting

--- a/_posts/2023-12-21-Windows实用注册表.md
+++ b/_posts/2023-12-21-Windows实用注册表.md
@@ -16,30 +16,29 @@ toc:
 
 ## 系统功能
 
+- 使虚拟内存可以设置在非系统盘（修复报错“由于启动计算机时出现了页面文件配置问题，Windows在你的计算机上创建了一个临时页面文件”）
 
-1. 使虚拟内存可以设置在非系统盘（修复报错“由于启动计算机时出现了页面文件配置问题，Windows在你的计算机上创建了一个临时页面文件”）
-
-```ini
+```cmd
 reg add "HKLM\System\CurrentControlSet\Control\Session Manager\Memory Management" /v PagefileOnOsVolume /t REG_DWORD /d 0 /f
 ```
 
-2. 将每个资源管理器窗口作为独立的实例以提高稳定性
+- 将每个资源管理器窗口作为独立的实例以提高稳定性
 
-```ini
+```cmd
 reg add "HKCU\Software\Microsoft\Windows\CurrentVersion\Explorer\Advanced" /v SeparateProcess /t REG_DWORD /d 1 /f
 ```
 
-3. 不要将驱动程序和内核模式系统代码放进虚拟内存（可能解决一些诡异的驱动稳定性问题）
+- 不要将驱动程序和内核模式系统代码放进虚拟内存（可能解决一些诡异的驱动稳定性问题）
 
-```ini
+```cmd
 reg add "HKLM\System\CurrentControlSet\Control\Session Manager\Memory Management" /v DisablePagingExecutive /t REG_D
 ```
 
 ## 系统界面
 
-1. 桌面、资源管理器等的字体缩放异常且无法通在设置中恢复，修改注册表重置缩放
+- 桌面、资源管理器等的字体缩放异常且无法通在设置中恢复，修改注册表重置缩放
 
-```ini
+```cmd
 Windows Registry Editor Version 5.00
  
 [HKEY_CURRENT_USER\Control Panel\Desktop\WindowMetrics]
