--- a/_posts/2022-04-27-中文文案排版指南.md
+++ b/_posts/2022-04-27-中文文案排版指南.md
@@ -1,12 +1,14 @@
 ---
 layout: post
-title: 中文文案排版指北
+title: 中文文案排版指南
 date: 2022-04-27 12:00:00
-description: Chinese copywriting guidelines for better written communication
+description: 中文文案排版指南，用于提升书面沟通效果
 tags: writing formatting
 categories: tools
+featured: false
+disqus_comments: false
+related_posts: true
 ---
-
 
 统一中文文案、排版的相关用法，降低团队成员之间的沟通成本，增强网站气质。
 
