--- a/_posts/2023-12-21-Windows实用注册表.md
+++ b/_posts/2023-12-21-Windows实用注册表.md
@@ -2,17 +2,17 @@
 layout: post
 title: Windows实用注册表
 date: 2023-12-21 15:09:00
-description: Organizing the practical windows registry
+description: 实用Windows注册表的整理
 tags: windows code
 categories: tool
 featured: false
-disqus_comments: true
+disqus_comments: false
 related_posts: true
 toc:
   sidebar: left
 ---
 
-自己整理一下常见的问题, 避免每次都要搜索.
+自己整理一下Windows中可以使用注册表解决的常见问题，避免每次都要搜索.
 
 ## 系统功能
 
