--- a/_posts/2023-12-21-Windows实用注册表.md
+++ b/_posts/2023-12-21-Windows实用注册表.md
@@ -6,7 +6,7 @@ description: 实用Windows注册表的整理
 tags: windows code
 categories: tool
 featured: false
-disqus_comments: false
+discus_comments: false
 related_posts: true
 toc:
   sidebar: left
