--- a/_posts/2022-04-27-中文文案排版指南.md
+++ b/_posts/2022-04-27-中文文案排版指南.md
@@ -6,7 +6,7 @@ description: 中文文案排版指南，用于提升书面沟通效果
 tags: writing formatting
 categories: tools
 featured: false
-disqus_comments: false
+discus_comments: false
 related_posts: true
 ---
 
