--- a/_posts/2022-09-01-建立你的记录.md
+++ b/_posts/2022-09-01-建立你的记录.md
@@ -6,7 +6,7 @@ description: 在年轻的时候，建立好的记录非常重要
 tags: writing
 categories: collection
 featured: false
-discus_comments: false
+giscus_comments: false
 related_posts: true
 ---
 
