--- a/_posts/2023-12-21-Windows实用注册表.md
+++ b/_posts/2023-12-21-Windows实用注册表.md
@@ -6,10 +6,10 @@ description: 实用Windows注册表的整理
 tags: windows code
 categories: tool
 featured: false
-discus_comments: false
+giscus_comments: false
 related_posts: true
 toc:
-  sidebar: left
+  sidebar: right
 ---
 
 自己整理一下Windows中可以使用注册表解决的常见问题，避免每次都要搜索.
