add Research Summary Page Funtion

--- a/_posts/2022-04-27-中文文案排版指南.md
+++ b/_posts/2022-04-27-中文文案排版指南.md
@@ -3,8 +3,8 @@ layout: post
 title: 中文文案排版指南
 date: 2022-04-27 12:00:00
 description: 中文文案排版指南，用于提升书面沟通效果
-tags: writing formatting
-categories: tools
+tags: Formatting
+categories: Writing
 featured: false
 giscus_comments: false
 related_posts: true
