--- a/_posts/2024-04-24-如何提升论文的可读性？.md
+++ b/_posts/2024-04-24-如何提升论文的可读性？.md
@@ -2,9 +2,9 @@
 layout: post
 title: 如何提升论文的可读性？
 date: 2024-04-24 22:02:00
-description: 摘录自Writing science - Joshua Schimel
-tags: writing research
-categories: collection
+description: 摘录自[Writing science - Joshua Schimel]
+tags: Formatting, Paper
+categories: Collection, Research, Writing
 featured: false
 giscus_comments: true
 related_posts: true
