--- a/_posts/2022-09-01-建立你的记录.md
+++ b/_posts/2022-09-01-建立你的记录.md
@@ -3,8 +3,8 @@ layout: post
 title: 建立你的记录
 date: 2022-09-01 12:00:00
 description: 剪辑自[饶毅科学公众号]
-tags: Discussion
-categories: Collection
+tags: discussion
+categories: collection
 featured: false
 giscus_comments: false
 related_posts: true
