--- a/_posts/2022-10-14-Linux实用配置记录.md
+++ b/_posts/2022-10-14-Linux实用配置记录.md
@@ -3,8 +3,8 @@ layout: post
 title: Linux实用配置记录
 date: 2024-06-13 19:36:53
 description: Linux系统软件配置和常见错误解决方案的记录
-tags: System
-categories: Tool, Code
+tags: system
+categories: tool, code
 featured: false
 giscus_comments: true
 related_posts: true
