--- a/_posts/2022-11-21-Windows实用配置记录.md
+++ b/_posts/2022-11-21-Windows实用配置记录.md
@@ -83,3 +83,12 @@ Windows Registry Editor Version 5.00
 "IconVerticalSpacing"="-1125"
 "MinAnimate"="0"
 ```
+
+## PowerShell 7
+
+1. oh-my-posh主题
+
+```powershell
+oh-my-posh init pwsh --config "$env:POSH_THEMES_PATH\atomic.omp.json" | Invoke-Expression
+```
+
