--- a/_posts/2024-06-16-我的表达欲在递减.md
+++ b/_posts/2024-06-16-我的表达欲在递减.md
@@ -32,7 +32,7 @@ related_posts: false
 
 ## 缺乏相关的欲望
 
-逐渐远离分享的心态，就像在雁栖湖时的那天傍晚，我离开宿舍时场景一样。当我走出公寓，眼前的夕阳和周围的云朵展现了一幅令人震撼的画面。夕阳呈现出一种无法用语言描述的特殊颜色，散发出炽热而柔和的光辉，周围的云朵则像是被染色的棉絮，以一种难以言喻的方式围绕着太阳。这些云朵仿佛是自然界的画师随意挥洒的颜料，形成了一副天空的壮丽画卷。夕阳被云彩环抱，光与影的交错让整个天空都显得既神秘又迷人。我被这景色定住了脚步，目不转睛地凝视，然后掏出手机拍下照片，再看一看，然后照常干饭。身边有很多人都拍照发了朋友圈，而我没有这个想法，只是觉得应该记录下来。这与我刚上本科时大不相同，那时的我热衷于记录身边的一切，无论是自然景观还是日常琐事，都乐于通过镜头记录并与人分享。这种心理上的变化让我感到困惑。我不确定这种变化是好是坏。是我变得更能沉浸于当下的体验，还是我失去了与他人分享美好瞬间的热情？这是否反映了我对世界的感知方式和与人交流的方式都在悄然变化？这种改变背后的原因是什么，我尚未能够完全理解。
+逐渐远离分享的心态。在雁栖湖时的那=某天傍晚，我走出公寓，眼前的夕阳和周围的云朵展现了一幅令人震撼的画面。夕阳呈现出一种无法用语言描述的特殊颜色，散发出炽热而柔和的光辉，周围的云朵则像是被染色的棉絮，以一种难以言喻的方式围绕着太阳。夕阳被云彩环抱，光与影的交错让整个天空都显得既神秘又迷人。我被这景色定住了脚步，目不转睛，然后掏出手机拍下照片，再照常干饭。身边很多人都拍照发了朋友圈，而我没有这个想法，只是觉得应该记录下来。这与我刚上本科时的心态大不相同，那时的我热衷于记录身边的一切，无论是自然景观还是日常琐事，都乐于通过镜头记录并与人分享。这种心理上的变化让我感到困惑。我不确定这种变化是好是坏。是我变得更能沉浸于当下的体验，还是我失去了与他人分享美好瞬间的热情？这是否反映了我对世界的感知方式和与人交流的方式都在悄然变化？这种改变背后的原因是什么，我尚未能够完全理解。
 
 ## 该不该相信人格特征
 
